<?xml version="1.0" encoding="utf-8"?>
<!--
@drawable/right_arrow:
    edited form:https://www.iconfinder.com/icons/1031536/arrow_arrow_right_chevron_chevronright_right_right_icon_icon#size=128
    by: Denis Mikhutin
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.example.owenslaptop.interlock_app.Wall_Rebuilding2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Project Info"
        android:textStyle="bold"
        android:drawablePadding="20dp"
        android:id="@+id/headlineTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dimensions_title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/headlineTextView"
        android:id="@+id/dimensions_tv"/>

    <EditText
        android:id="@+id/height_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dimensions_tv"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/height_hint"
        android:inputType="numberDecimal"
        style="@style/no_outline_edit_text"/>

    <EditText
        android:id="@+id/length_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/height_input"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/length_hint"
        style="@style/no_outline_edit_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angle_title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/length_input"
        android:id="@+id/angle_headline_tv"/>

    <SeekBar
        android:id="@+id/angle_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/angle_headline_tv"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="64dp"
        android:layout_below="@+id/angle_seek_bar"
        android:text="Horizontal"
        android:id="@+id/angle_tv"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/wall_rebuilding_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/right_arrow"
        android:onClick="fabClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"/>

</RelativeLayout>
