<?xml version="1.0" encoding="utf-8"?>
<!--
@drawable/right_arrow:
    edited form:https://www.iconfinder.com/icons/1031536/arrow_arrow_right_chevron_chevronright_right_right_icon_icon#size=128
    by: Denis Mikhutin-->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oep.interlock_app.Wall_Rebuilding">

    <!-- The first child in the layout is for the main Activity UI-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffffff">

        <!--add values below here -->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_job_title"
            android:textStyle="bold"
            android:id="@+id/headlineTextView"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headlineTextView"
            android:id="@+id/scroll_view"
            android:layout_marginTop="15dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_above="@+id/wall_rebuilding_FAB">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_title"/>

                <Spinner
                    android:id="@+id/location_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/location"
                    android:layout_marginTop="10dp"
                    style="@style/no_outline_spinner"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessibility_title"
                    android:layout_marginTop="10dp"/>

                <SeekBar
                    android:id="@+id/accessibility_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="2"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:id="@+id/accessibility_tv"
                    android:text="@string/hard_to_access"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maneuver_title"
                    android:layout_marginTop="10dp"/>

                <SeekBar
                    android:id="@+id/maneuver_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="2"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:id="@+id/maneuver_tv"
                    android:text="@string/little_room"/>
            </LinearLayout>
        </ScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/wall_rebuilding_FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="normal"
            app:srcCompat="@drawable/right_arrow"
            android:onClick="fabClicked"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="25dp"/>

        <!--add values above here -->

    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>
