<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oep.interlock_app.Wall_Rebuilding">

    <!-- The first child in the layout is for the main Activity UI-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#ffffffff">

        <!--add values below here -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_info"
            android:textStyle="bold"
            android:id="@+id/headlineTextView"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headlineTextView"
            android:id="@+id/scroll_view"
            android:layout_marginTop="15dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/widthTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dimensions_title"/>

                <EditText
                    android:id="@+id/widtInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/width_hint"
                    android:inputType="numberDecimal"
                    style="@style/no_outline_edit_text"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <EditText
                    android:id="@+id/lenInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/length_hint"
                    android:inputType="numberDecimal"
                    style="@style/no_outline_edit_text"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>


                <TextView
                    android:id="@+id/patternTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Interlock Pattern"/>

                <Spinner
                    android:id="@+id/patternSp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/pattern"
                    android:layout_below="@+id/patternTV"
                    android:layout_marginTop="10dp"
                    style="@style/no_outline_spinner"/>

                <TextView
                    android:id="@+id/sizeJointTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Size of Joints" />

                <SeekBar
                    android:id="@+id/sizeJointsSB"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:max="4"
                    android:progress="2" />

                <TextView
                    android:id="@+id/sizeDisplayTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"/>

            </LinearLayout>
        </ScrollView>




        <android.support.design.widget.FloatingActionButton
            android:id="@+id/stepRebuildingFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="normal"
            app:srcCompat="@drawable/right_arrow"
            android:onClick="fabClicked"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="25dp"/>

        <!--add values above here -->

    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>