<?xml version="1.0" encoding="utf-8"?>
<!--
@drawable/right_arrow:
    edited form:https://www.iconfinder.com/icons/1031536/arrow_arrow_right_chevron_chevronright_right_right_icon_icon#size=128
    by: Denis Mikhutin
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.oep.owenslaptop.interlock_app.com.oep.interlock_app.Wall_Rebuilding2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Project Info"
        android:textStyle="bold"
        android:drawablePadding="20dp"
        android:id="@+id/headlineTextView"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dimensions_title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/headlineTextView"
        android:id="@+id/dimensions_tv"/>

    <EditText
        android:id="@+id/height_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dimensions_tv"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/height_hint"
        android:inputType="numberDecimal"
        style="@style/no_outline_edit_text"/>

    <EditText
        android:id="@+id/length_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/height_input"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/length_hint"
        android:layout_marginRight="20dp"
        style="@style/no_outline_edit_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shape"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/length_input"
        android:id="@+id/shape_tv"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_below="@id/shape_tv"
        android:layout_marginTop="10dp"
        android:id="@+id/shape_rg">

        <RadioButton
            android:id="@+id/wallCurved_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Curved"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/wallStraight_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Straight" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Other"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/shape_rg"
        android:id="@+id/other_tv"/>

    <CheckBox
        android:id="@+id/hard_line_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/other_tv"
        android:layout_marginTop="10dp"
        android:text="Hard line to work from" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/wall_rebuilding_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/right_arrow"
        android:onClick="fabClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"/>

</RelativeLayout>